awx-k8s/awx-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/component":"database","app.kubernetes.io/instance":"postgres-ansible-awx","app.kubernetes.io/managed-by":"awx-operator","app.kubernetes.io/name":"postgres","app.kubernetes.io/operator-version":"0.12.0","app.kubernetes.io/part-of":"ansible-awx"},"name":"ansible-awx-postgres","namespace":"awx-namespace"},"spec":{"clusterIP":"None","ports":[{"port":5432}],"selector":{" [...]
  creationTimestamp: "2021-10-25T23:21:48Z"
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: postgres-ansible-awx
    app.kubernetes.io/managed-by: awx-operator
    app.kubernetes.io/name: postgres
    app.kubernetes.io/operator-version: 0.12.0
    app.kubernetes.io/part-of: ansible-awx
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/operator-version: {}
          f:app.kubernetes.io/part-of: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"6bba44bc-763b-4b0b-afd4-f0650a61b97d"}:
            .: {}
            f:apiVersion: {}
            f:kind: {}
            f:name: {}
            f:uid: {}
      f:spec:
        f:clusterIP: {}
        f:ports:
          .: {}
          k:{"port":5432,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/part-of: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: Swagger-Codegen
    operation: Update
    time: "2021-10-25T23:21:48Z"
  name: ansible-awx-postgres
  namespace: awx-namespace
  ownerReferences:
  - apiVersion: awx.ansible.com/v1beta1
    kind: AWX
    name: ansible-awx
    uid: 6bba44bc-763b-4b0b-afd4-f0650a61b97d
  resourceVersion: "2445910"
  uid: 3242762a-9c35-4860-8577-9a622aa5d2bf
spec:
  clusterIP: None
  clusterIPs:
  - None
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: postgres-ansible-awx
    app.kubernetes.io/managed-by: awx-operator
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: ansible-awx
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
