awx-k8s/awx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($http_x_forwarded_proto = 'http') {
        return 301 https://$host$request_uri;
      }


spec:
  tls:
  - hosts:
    - dartion.in
    secretName: awx-ssl
  rules:
  - host: dartion.in
#    http:
    #  paths:
    #  - path: /
    #    pathType: Prefix
  defaultBackend:
    service:
      name: ansible-awx-service
      port:
        number: 80
